--- a/Style.css
+++ b/Style.css
@@ -5,9 +5,10 @@
     font-family: "Roboto", sans-serif;
 }
 a{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
+    text-decoration: none !important;
+    color: rgb(255, 255, 255) !important;
 }
+
 .Logo-Dawood-Trader{
         display: flex;
         align-items: center;
@@ -44,10 +45,11 @@ a{
 }
 
  .product-detail{
-        margin-top: 3rem;
+        margin-top: 2rem;
         display: flex;
         align-items: center;
         .left-detail{
+            text-align: center;
             flex: 1;
             img{
                 width: 28rem;
@@ -89,35 +91,17 @@ a{
                 padding: 10px 18px;
                 border-radius: 100px;
                 cursor: pointer;
-                background-color: #ff5039;
+                background-color: rgb(254, 20, 20);
                 &:hover{
                     background-color: #ce3926;
                 }
             }
-            h2{
-                margin-top: 0.8rem;
-            }
-            p{
-                font-size: 0.90rem;
-                margin-top: 0.8rem;
-            }
+           
+            
         }
     }
 
-    .Product-Card{
-        margin-top: 30px;
-        display: flex;
-        width: 100%;
-        justify-content: space-evenly;
-    }
-    .card{
-        /* padding: ; */
-        text-align: center;
-        width: 20%;
-    }
-    .card img{
-        width: 20rem;
-    }
+
     .inside-card{
         padding: 10px;
     }
@@ -132,16 +116,14 @@ a{
         color: #6b6b6b;
     }
     .price{
-        padding: 10px;
-        width: 100%;
-        font-size: 1.3rem;
+        padding: 8px;
+        font-size: 1.4rem;
         display: flex;
-        justify-content: center;
-        gap: 10px;
+        /* justify-content: center; */
         align-items: center;
     }
     .discount-price{
-        /* background-color: rgb(254, 20, 20); */
+        color: rgb(254, 20, 20);
        font-size: 1.5rem;
        font-weight: 800;
     }
@@ -150,7 +132,6 @@ a{
         font-size: 1rem;
     }
     .inside-card button {
-        text-decoration: none;
         border: none;
         font-size: .9rem;
         padding: 14px 24px;
@@ -161,4 +142,13 @@ a{
     }
     .inside-card button:hover{
         background-color: rgb(190, 39, 39);
+    }
+    .Select-Product-Model{
+        margin-top: .2rem;
+        font-style: italic;
+        font-size: 1rem;
+        font-weight: 400;
+    }
+    .select-part{
+        color: #474747;
     }
