--- a/Style.css
+++ b/Style.css
@@ -68,6 +68,12 @@ a{
             font-size: 2.5rem;
         }
     }
+
+     @media (max-width: 768px) {
+        #main-title{
+            font-size: 1.8rem;
+    }
+    }
     
     @media (max-width: 500px) {
         .Heading-Section h1 {
@@ -79,6 +85,10 @@ a{
             width: 95%;
         }
     }
+
+    
+
+    
 
 .product-detail{
     margin-top: 2rem;
@@ -92,6 +102,13 @@ a{
 .left-detail img{
     width: 28rem;
 }
+
+@media (max-width: 500px) {
+        .left-detail img{
+        width: 20rem;
+}
+    }
+
 .left-detail .small-img-row{
     display: flex;
     justify-content: space-between;
@@ -104,7 +121,7 @@ a{
     width: 100%;
 }
 .right-detail{
-    padding-left: 1rem;
+    padding-left: .4rem;
     flex: 2;
 }
 .right-detail h5{
