--- a/Style.css
+++ b/Style.css
@@ -5,15 +5,20 @@
     font-family: "Roboto", sans-serif;
 }
 
-.Logo-Dawood-Trader{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 4rem;
-        padding: 20px;
-        font-weight: 500;
-        font-family: "Beau Rivage", cursive;
-    }
+.logo-dawood-trader a {
+    text-decoration: none;
+    color: black;
+}
+.logo-dawood-trader a:hover {
+   color: black;
+}
+.logo-dawood-trader a h3{
+    font-family: "Beau Rivage", cursive;
+    font-size: 3.8rem;
+    text-align: center;
+    margin: 20px 20px;
+}
+
 .Heading-Section{
     text-align: center;
     padding: 20px;
@@ -61,7 +66,7 @@
 
     @media (max-width: 768px) {
         .Logo-Dawood-Trader{
-            font-size: 2.5rem;
+            font-size: 2rem;
         }
     }
 
