--- a/Style.css
+++ b/Style.css
@@ -244,3 +244,122 @@
     color: white;
     transition: all 0.3s ease;
 }
+
+/* Services is Start */
+.services{
+    text-align: center;
+    margin-top: 3rem;
+    /* padding: 2rem; */
+   
+}
+.services ul li{
+    list-style: none;
+    font-size: 1rem;
+    /* margin: 1rem 0; */
+    color: #333;
+}
+.services h6{
+    font-size: .97rem;
+    font-weight: 400;
+}
+.choose-us{
+    border-radius: 10px;
+    padding: 10px 12px;
+}
+.services h4{
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+.choose-us-one{
+    border-radius: 10px;
+    padding: 10px 12px;
+    background-color: rgb(231, 239, 218);
+    margin: 10px;
+    font-weight: 300;
+}
+.choose-us-one i{
+    font-size: 2rem;
+    color: rgb(8, 156, 8);
+}
+
+.choose-us-two{
+    border-radius: 10px;
+    padding: 10px 12px;
+    background-color: rgb(239, 234, 218);
+     margin: 10px;
+     font-weight: 300;
+}
+.choose-us-two i{
+    font-size: 2rem;
+    color: rgb(211, 172, 45);
+}
+
+.choose-us-three{
+    border-radius: 10px;
+    padding: 10px 12px;
+    background-color: rgb(218, 237, 239);
+     margin: 10px;
+     font-weight: 300;
+}
+.choose-us-three i{
+    font-size: 2rem;
+    color: rgb(56, 206, 222);
+}
+
+.choose-us-four{
+    border-radius: 10px;
+    padding: 10px 12px;
+    background-color: rgb(218, 224, 239);
+     margin: 10px;
+     font-weight: 300;
+}
+.choose-us-four i{
+    font-size: 2rem;
+    color: rgb(54, 105, 232);
+}
+
+.choose-us-five{
+    border-radius: 10px;
+    padding: 10px 12px;
+    background-color: rgb(239, 218, 218);
+     margin: 10px;
+     font-weight: 300;
+}
+.choose-us-five i{
+    font-size: 2rem;
+    color: rgb(233, 62, 62);
+}
+
+.choose-us-six{
+    border-radius: 10px;
+    padding: 10px 12px;
+    background-color: rgb(220, 218, 239);
+     margin: 10px;
+     font-weight: 300;
+}
+.choose-us-six i{
+    font-size: 2rem;
+    color: rgb(76, 58, 239);
+}
+.services-end{
+    letter-spacing: .3rem;
+}
+
+/* Services is End */
+
+/* About is Start */
+
+.about-us-right{
+    width: 500px;
+    height: 500px;
+    overflow: hidden;
+}
+.about-us-right image{
+    width: 100%;
+    height: 100%;
+}
+.About-Section p{
+    font-weight: 300;
+}
+
+/* About is End */
