--- a/Style.css
+++ b/Style.css
@@ -349,17 +349,20 @@
 
 /* About is Start */
 
-.about-us-right{
-    width: 500px;
-    height: 500px;
-    overflow: hidden;
-}
-.about-us-right image{
-    width: 100%;
-    height: 100%;
-}
 .About-Section p{
     font-weight: 300;
 }
-
+.footer{
+    color: rgb(95, 95, 95);
+    text-align: center;
+    padding: 20px;
+}
+.footer h5{
+    margin: 0;
+}
+.footer-color{
+    background-color: rgb(236, 236, 236);
+}
 /* About is End */
+
+
