--- a/Style.css
+++ b/Style.css
@@ -366,6 +366,16 @@
 .contact-us p{
     font-weight: 300;
 }
+.location{
+    width: 100%;
+    height: auto;
+}
+.location iframe{
+    width: 100%;
+    height: 350px;
+    border: none;
+    border-radius: 10px;
+}
 /* About is End */
 
 
